Finished encoder implementation, rewrote line for area extractor. There is an issue with encoding of lines that coincide with super pixels borders

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>758</width>
+    <width>776</width>
     <height>428</height>
    </rect>
   </property>
@@ -67,7 +67,7 @@
     <property name="geometry">
      <rect>
       <x>660</x>
-      <y>50</y>
+      <y>30</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -80,7 +80,7 @@
     <property name="geometry">
      <rect>
       <x>700</x>
-      <y>50</y>
+      <y>30</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -89,9 +89,9 @@
    <widget class="QPushButton" name="btnOK">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>90</y>
-      <width>75</width>
+      <x>650</x>
+      <y>120</y>
+      <width>121</width>
       <height>23</height>
      </rect>
     </property>
@@ -114,8 +114,8 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>120</y>
-      <width>101</width>
+      <y>50</y>
+      <width>121</width>
       <height>61</height>
      </rect>
     </property>
@@ -152,14 +152,73 @@
    <widget class="QPushButton" name="btnScann">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>190</y>
+      <x>650</x>
+      <y>280</y>
       <width>111</width>
-      <height>51</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>Extract hot spots</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spbExtrLayer">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>210</y>
+      <width>43</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spbMarker">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>250</y>
+      <width>43</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbExtrLayer">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>210</y>
+      <width>71</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Layer to scan:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbExtrLayer_2">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>240</y>
+      <width>71</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Marker layer:</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnEncode">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>320</y>
+      <width>111</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Encode</string>
     </property>
    </widget>
   </widget>
@@ -168,8 +227,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>758</width>
-     <height>21</height>
+     <width>776</width>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
